--- a/ListCrown/app/src/main/res/layout/activity_main.xml
+++ b/ListCrown/app/src/main/res/layout/activity_main.xml
@@ -30,31 +30,41 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/add_a_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="36dp"
-        android:backgroundTint="#99ff99"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="#ff9999"
         android:src="@drawable/add"
         app:layout_constraintBottom_toBottomOf="@+id/list_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.87"
+        app:layout_constraintHorizontal_bias="0.941"
         app:layout_constraintStart_toStartOf="@+id/list_view" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/calendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="12dp"
         android:backgroundTint="#ffff99"
         android:src="@drawable/calendar"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
+        app:layout_constraintBottom_toTopOf="@+id/add_a_task"
+        app:layout_constraintEnd_toEndOf="@+id/list_view" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/track"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="12dp"
+        android:backgroundTint="#99ff99"
+        android:src="@drawable/tick"
+        app:layout_constraintBottom_toTopOf="@+id/calendar"
         app:layout_constraintEnd_toEndOf="@+id/list_view" />
 
 
