--- a/ListCrown/app/src/main/res/layout/activity_view_item.xml
+++ b/ListCrown/app/src/main/res/layout/activity_view_item.xml
@@ -6,8 +6,8 @@
 
     <TextView
         android:id="@+id/id"
-        android:layout_width="20dp"
-        android:layout_height="wrap_content"
+        android:layout_width="62dp"
+        android:layout_height="42dp"
         android:visibility="invisible" />
 
     <TextView
@@ -29,9 +29,8 @@
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/id"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:maxLines="1"
         android:padding="3dp"
         android:visibility="visible" />
-
 
 </RelativeLayout>
