--- a/ListCrown/app/src/main/res/menu/menu_main.xml
+++ b/ListCrown/app/src/main/res/menu/menu_main.xml
@@ -2,10 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/add_record"
-        android:icon="@android:drawable/ic_menu_add"
+        android:id="@+id/menu_open"
+        android:icon="@drawable/menu_dot2"
         android:orderInCategory="100"
-        android:title="add record"
+        android:title="open_mene"
         app:showAsAction="always"/>
 
 </menu>
