--- a/ListCrown/app/src/main/res/layout/activity_view_item.xml
+++ b/ListCrown/app/src/main/res/layout/activity_view_item.xml
@@ -5,9 +5,19 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/state"
+        android:layout_width="62dp"
+        android:layout_height="62dp"
+        android:layout_alignParentStart="true"
+        android:gravity="center"
+        android:layout_marginStart="0dp"
+        android:visibility="visible" />
+
+    <TextView
         android:id="@+id/id"
         android:layout_width="62dp"
         android:layout_height="42dp"
+        android:layout_marginEnd="0dp"
         android:visibility="invisible" />
 
     <TextView
@@ -27,6 +37,19 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/keyword"
         android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/id"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="3dp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/enddate"
+        android:layout_width="339dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/description"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="2dp"
         android:layout_toRightOf="@id/id"
         android:ellipsize="end"
         android:maxLines="1"
