--- a/ListCrown/app/src/main/res/layout/singleitem.xml
+++ b/ListCrown/app/src/main/res/layout/singleitem.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/oneItem"
         android:layout_width="339dp"
-        android:layout_height="89dp"
+        android:layout_height="115dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="36dp"
         tools:layout_editor_absoluteY="16dp">
@@ -18,12 +18,13 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="33dp" />
 
         <EditText
             android:id="@+id/description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="75dp"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine" />
