--- a/ListCrown/app/src/main/res/layout/activity_add_item.xml
+++ b/ListCrown/app/src/main/res/layout/activity_add_item.xml
@@ -18,7 +18,7 @@
         android:id="@+id/blank1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"/>
+        android:textSize="20sp"/>
 
     <EditText
         android:id="@+id/description_add_edittext"
