change time picker

--- a/ListCrown/app/src/main/res/layout/activity_display_message.xml
+++ b/ListCrown/app/src/main/res/layout/activity_display_message.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="50dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        app:compactCalendarBackgroundColor="#ffd"
+        app:compactCalendarBackgroundColor="#fff"
         app:compactCalendarCurrentDayBackgroundColor="#CFCFCF"
         app:compactCalendarCurrentSelectedDayBackgroundColor="#E57320"
         app:compactCalendarMultiEventIndicatorColor="#000"
