change time picker

--- a/ListCrown/app/src/main/res/values/colors.xml
+++ b/ListCrown/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#99ccff</color>
     <color name="colorPrimaryDark">#9999ff</color>
-    <color name="colorAccent">#FF6A6A</color>
+    <color name="colorAccent">#F18057</color>
 </resources>
