--- a/ListCrown/app/src/main/res/layout/activity_view_item.xml
+++ b/ListCrown/app/src/main/res/layout/activity_view_item.xml
@@ -1,59 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="58dp"
+        android:layout_height="82dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toStartOf="@+id/itemInformation"
+        app:srcCompat="@android:color/holo_red_light" />
 
     <TextView
         android:id="@+id/state"
-        android:layout_width="62dp"
-        android:layout_height="62dp"
+        android:layout_width="57dp"
+        android:layout_height="82dp"
         android:layout_alignParentStart="true"
-        android:gravity="center"
         android:layout_marginStart="0dp"
+        android:gravity="center"
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/id"
-        android:layout_width="62dp"
-        android:layout_height="42dp"
+        android:layout_width="56dp"
+        android:layout_height="71dp"
+        android:layout_alignEnd="@+id/state"
         android:layout_marginEnd="0dp"
         android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/keyword"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/id"
-        android:maxLines="1"
-        android:padding="3dp"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:id="@+id/itemInformation"
+        android:layout_width="320dp"
+        android:layout_height="82dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toEndOf="@+id/state"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/keyword"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/id"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:padding="3dp"
-        android:visibility="visible" />
+        <TextView
+            android:id="@+id/keyword"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/id"
+            android:maxLines="1"
+            android:padding="3dp"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/enddate"
-        android:layout_width="339dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/description"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="2dp"
-        android:layout_toRightOf="@id/id"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:padding="3dp"
-        android:visibility="visible" />
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/keyword"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/id"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:padding="3dp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/enddate"
+            android:layout_width="345dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/description"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="2dp"
+            android:layout_toRightOf="@id/id"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:padding="3dp"
+            android:visibility="visible" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
