--- a/ListCrown/app/src/main/res/layout/singleitem.xml
+++ b/ListCrown/app/src/main/res/layout/singleitem.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/oneItem"
         android:layout_width="339dp"
-        android:layout_height="115dp"
+        android:layout_height="60dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="36dp"
         tools:layout_editor_absoluteY="16dp">
@@ -17,17 +17,17 @@
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:text="TextView"
-            android:textSize="33dp" />
+            android:textSize="20dp"
+            android:textStyle="bold"/>
 
-        <EditText
+        <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine" />
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="14dp"/>
 
     </LinearLayout>
 
