--- a/ListCrown/app/src/main/res/layout/time_picker.xml
+++ b/ListCrown/app/src/main/res/layout/time_picker.xml
@@ -15,7 +15,7 @@
         android:calendarViewShown="false"
         android:layoutMode="opticalBounds"
         android:startYear="2019"
-        android:theme="@android:style/Theme.Black" />
+        android:theme="@android:style/Theme.Holo.Light" />
 
     <TimePicker
         android:id="@+id/time_picker"
@@ -24,6 +24,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="15dp"
         android:layout_weight="50"
-        android:theme="@android:style/Theme.Black" />
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
 
 </LinearLayout>
