--- a/ListCrown/app/src/main/res/values/colors.xml
+++ b/ListCrown/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#9999ff</color>
     <color name="colorAccent">#F5AF95</color>
     <color name="colorGreen">#FF95F59B</color>
+    <color name="champagneYellow">#FFF0BB0D</color>
 </resources>
